# egoallo

./: .gitignore  0_preprocess_training_data.py  0a_preprocess_training_data.py  0b_preprocess_training_data.py  1_run_hamer_on_vrs.py  1_train_motion_prior.py  2_inference_on_aria.py  2_run_hamer_on_vrs.py  3_aria_inference.py  3_visualize_outputs.py  4_visualize_outputs.py  5_eval_body_metrics.py  5_time_guidance.py  README.md  _hamer_helper.py  _wilor_helper.py  aria_utils.py  download_checkpoint_and_data.sh  index.html  pyproject.toml  train_motion_prior.py
.github/workflows/: pyright.yml
data/: glasses.stl
data/smplh_gender_conversion/: female_to_male.npz  female_to_neutral.npz  male_to_female.npz  male_to_neutral.npz  neutral_to_female.npz  neutral_to_male.npz
src/egoallo/: fncsmpl.py  fncsmpl_extensions.py  fncsmpl_jax.py  guidance_optimizer_jax.py  guidance_optimizer_torch.py  hand_detection_structs.py  inference_utils.py  metrics_helpers.py  network.py  sampling.py  tensor_dataclass.py  training_loss.py  training_utils.py  vis_helpers.py
src/egoallo/data/: amass.py  aria_mps.py  dataclass.py  egopose_meta.py
src/egoallo/preprocessing/body_model/: __init__.py  body_model.py  skeleton.py  specs.py  utils.py
src/egoallo/preprocessing/geometry/: __init__.py  camera.py  helpers.py  plane.py  rotation.py
src/egoallo/preprocessing/geometry/transforms/: _base.py  _se2.py  _se3.py  _so2.py  _so3.py
src/egoallo/preprocessing/geometry/transforms/hints/: __init__.py
src/egoallo/preprocessing/geometry/transforms/utils/: _utils.py
src/egoallo/preprocessing/util/: tensor.py
src/egoallo/transforms/: __init__.py  _base.py  _se3.py  _so3.py
src/egoallo/transforms/utils/: _utils.py
viser-embed/: index.html
viser-embed/assets/: SplatSortWorker-NHJHkI9m.js  WebsocketServerWorker-2xce1CWr.js  index-BlD5E273.js  index-CBjUJs42.js  index-CPzZVH5I.css  index-CXUjpXJZ.js  index-C_MO4qpi.js  index-Djn8oZ1V.css  index-rvSkk8ep.js
